--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,7 +3,8 @@
     xmlns:r="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.saulmm.letters.MainActivity$PlaceholderFragment">
+    android:background="@android:color/holo_blue_bright"
+    tools:context="edu.saulmm.letters.MainActivity.LetterFragment">
 
     <edu.saulmm.letters.svg.IntroView
         android:id="@+id/intro"
@@ -22,12 +23,12 @@
         r:strokeColor="@android:color/holo_blue_dark"/>
 
 
-    <edu.saulmm.letters.views.LetterBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <!--<edu.saulmm.letters.views.LetterBar-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content">-->
 
 
-    </edu.saulmm.letters.views.LetterBar>
+    <!--</edu.saulmm.letters.views.LetterBar>-->
 
 
 </RelativeLayout>
